--- a/ShoesAdmin/src/app/components/dashboard/dashboard.component.html
+++ b/ShoesAdmin/src/app/components/dashboard/dashboard.component.html
@@ -85,26 +85,19 @@
   <!--Line with Area Chart 1 Starts-->
   <div class="chart-1">
     <div class="row btnDrop">
-      <div class="dropdown">
-        <button class="btn btn-outline-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
-          aria-expanded="false">
-          Tháng
-        </button>
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-          <a class="dropdown-item" *ngFor="let month of _listMonths">{{month}}</a>
-        </div>
+      <div class="select-months">
+        <select class="custom-select">
+          <option selected>Tháng</option>
+          <option value="{{month}}" *ngFor="let month of _listMonths">Tháng {{month}}</option>
+        </select>
       </div>
-      <div class="dropdown">
-        <button class="btn btn-outline-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
-          aria-expanded="false">
-          Năm
-        </button>
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-          <a class="dropdown-item" *ngFor="let year of _listYears">{{year}}</a>
-        </div>
+      <div class="select-year">
+        <select class="custom-select">
+          <option selected>Năm</option>
+          <option value="{{year}}" *ngFor="let year of _listYears">{{year}}</option>
+        </select>
       </div>
       <a class="btn btn-outline-success">OK</a>
-
     </div>
     <div class="row">
       <div class="col-sm-12">
@@ -116,24 +109,76 @@
   </div>
   <!--Line with Area Chart 1 Ends-->
 
-  <div class="row match-height chart-2">
-    <div class="col-sm-12">
-      <fusioncharts [id]="id2" [width]="width" [height]="height" [type]="type2" [dataFormat]="dataFormat" [dataSource]="dataSource2">
-      </fusioncharts>
+  <div class="match-height chart-2">
+    <div class="row btnDrop">
+      <div class="select-shoes">
+        <select class="custom-select">
+          <option selected>Hãng</option>
+          <option value="{{shoe.tenLoai}}" *ngFor="let shoe of _listGiay">{{shoe.tenLoai}}</option>
+        </select>
+      </div>
+      <div class="select-months">
+        <select class="custom-select">
+          <option selected>Tháng</option>
+          <option value="{{month}}" *ngFor="let month of _listMonths">Tháng {{month}}</option>
+        </select>
+      </div>
+      <div class="select-year">
+        <select class="custom-select">
+          <option selected>Năm</option>
+          <option value="{{year}}" *ngFor="let year of _listYears">{{year}}</option>
+        </select>
+      </div>
+      <a class="btn btn-outline-success">OK</a>
+    </div>
+    <div class="row">
+      <div class="col-sm-12">
+        <fusioncharts [id]="id2" [width]="width" [height]="height" [type]="type2" [dataFormat]="dataFormat" [dataSource]="dataSource2">
+        </fusioncharts>
+      </div>
     </div>
   </div>
 
-  <div class="row match-height chart-3">
-    <div class="col-sm-12">
-      <fusioncharts [id]="id3" [width]="width" [height]="height" [type]="type3" [dataFormat]="dataFormat" [dataSource]="dataSource3">
-      </fusioncharts>
+  <div class="match-height chart-3">
+    <div class="row btnDrop">
+      <div class="select-shoes">
+        <select class="custom-select">
+          <option selected>Hãng</option>
+          <option value="{{shoe.tenLoai}}" *ngFor="let shoe of _listGiay">{{shoe.tenLoai}}</option>
+        </select>
+      </div>
+      <div class="select-year">
+        <select class="custom-select">
+          <option selected>Năm</option>
+          <option value="{{year}}" *ngFor="let year of _listYears">{{year}}</option>
+        </select>
+      </div>
+      <a class="btn btn-outline-success">OK</a>
+    </div>
+    <div class="row">
+      <div class="col-sm-12">
+        <fusioncharts [id]="id3" [width]="width" [height]="height" [type]="type3" [dataFormat]="dataFormat" [dataSource]="dataSource3">
+        </fusioncharts>
+      </div>
     </div>
   </div>
 
-  <div class="row match-height chart-4">
-    <div class="col-sm-12">
-      <fusioncharts [id]="id4" [width]="width" [height]="height" [type]="type3" [dataFormat]="dataFormat" [dataSource]="dataSource4">
-      </fusioncharts>
+  <div class="match-height chart-4">
+    <div class="row btnDrop">
+      <div class="select-year">
+        <select class="custom-select">
+          <option selected>Năm</option>
+          <option value="{{year}}" *ngFor="let year of _listYears">{{year}}</option>
+        </select>
+      </div>
+      <a class="btn btn-outline-success">OK</a>
+    </div>
+
+    <div class="row">
+      <div class="col-sm-12">
+        <fusioncharts [id]="id4" [width]="width" [height]="height" [type]="type3" [dataFormat]="dataFormat" [dataSource]="dataSource4">
+        </fusioncharts>
+      </div>
     </div>
   </div>
 
