--- a/karl-shop/src/app/components/user-login/user-login.component.html
+++ b/karl-shop/src/app/components/user-login/user-login.component.html
@@ -5,7 +5,6 @@
       <div class="example-container">
         <mat-form-field>
           <input matInput [readonly]="true" placeholder="Email" [formControl]="email" value="{{newCustomer.email}}">
-          <!-- <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error> -->
         </mat-form-field>
 
         <mat-form-field>
@@ -15,10 +14,12 @@
         <mat-form-field>
           <input matInput placeholder="Mobile Phone" [formControl]="soDienThoai" value="{{newCustomer.soDienThoai}}" required>
         </mat-form-field>
-
+        <em *ngIf="soDienThoai.invalid && (soDienThoai.dirty || soDienThoai.touched)">Số điện thoại chưa đúng định dạng</em>
+        
         <mat-form-field>
           <input matInput placeholder="Adress" [formControl]="diaChi" value="{{newCustomer.diaChi}}" required>
         </mat-form-field>
+
 
         <section class="example-section">
           <div class="button-row">
