--- a/ShoesAdmin/src/app/components/dashboard/dashboard.component.html
+++ b/ShoesAdmin/src/app/components/dashboard/dashboard.component.html
@@ -86,18 +86,18 @@
   <div class="chart-1">
     <div class="row btnDrop">
       <div class="select-months">
-        <select class="custom-select">
-          <option selected>Tháng</option>
+        <select class="custom-select" [(ngModel)]="monthSelected">
+          <option value="0" selected>Tháng</option>
           <option value="{{month}}" *ngFor="let month of _listMonths">Tháng {{month}}</option>
         </select>
       </div>
       <div class="select-year">
-        <select class="custom-select">
+        <select class="custom-select" [(ngModel)]="yearSelected">
           <option selected>Năm</option>
           <option value="{{year}}" *ngFor="let year of _listYears">{{year}}</option>
         </select>
       </div>
-      <a class="btn btn-outline-success">OK</a>
+      <a class="btn btn-outline-success" (click)="findTop10()">OK</a>
     </div>
     <div class="row">
       <div class="col-sm-12">
