--- a/ShoesAdmin/src/app/components/dashboard/dashboard.component.html
+++ b/ShoesAdmin/src/app/components/dashboard/dashboard.component.html
@@ -87,13 +87,13 @@
     <div class="row btnDrop">
       <div class="select-months">
         <select class="custom-select" [(ngModel)]="monthSelected">
-          <option value="0" selected>Tháng</option>
+          <option value="0">Tháng</option>
           <option value="{{month}}" *ngFor="let month of _listMonths">Tháng {{month}}</option>
         </select>
       </div>
       <div class="select-year">
         <select class="custom-select" [(ngModel)]="yearSelected">
-          <option selected>Năm</option>
+          <option value="0">Năm</option>
           <option value="{{year}}" *ngFor="let year of _listYears">{{year}}</option>
         </select>
       </div>
