--- a/ShoesAdmin/src/app/components/table-sanpham/table-sanpham.component.html
+++ b/ShoesAdmin/src/app/components/table-sanpham/table-sanpham.component.html
@@ -12,7 +12,8 @@
                     <div class="card-body">
                         <div class="card-block">
                             <div class="mb-3">
-                                <a class="btn btn-raised gradient-pomegranate white" [routerLink]="['/chitiet-sp']">
+                                <a class="btn btn-raised gradient-pomegranate white" [routerLink]="['/themsanpham']" >
+                                        <!-- [routerLink]="['/themsanpham]" -->
                                     Thêm sản phẩm
                                 </a>
                             </div>
