--- a/ShoesAdmin/src/app/components/chitiet-sanpham/chitiet-sanpham.component.html
+++ b/ShoesAdmin/src/app/components/chitiet-sanpham/chitiet-sanpham.component.html
@@ -19,8 +19,7 @@
         <div class="card">
           <div class="card-body">
             <div class="px-3">
-              <!-- *ngIf="chitietSp != null" -->
-              <form class="form" method="post" [formGroup]="chitietSanpham" (ngSubmit)="saveSanpham()">
+              <form class="form" method="post" [formGroup]="chitietSanpham">
                 <div class="form-body">
                   <h4 class="form-section" formControlName="idSp">
                     <i class="ft-user"></i>
@@ -87,10 +86,10 @@
                   <div class="row">
                     <div class="col-md-12">
                       <div class="form-actions text-center">
-                        <button type="button" class="btn btn-raised btn-raised btn-warning" routerLink="/sanpham" *ngIf="chitietSp != null">
+                        <button type="button" class="btn btn-raised btn-raised btn-warning" routerLink="/sanpham">
                           <i class="ft-corner-up-left"></i> Quay lại
                         </button>
-                        <button type="submit" (click)="showModal(chitietSp.id)" class="btn btn-raised btn-raised btn-primary">
+                        <button type="submit" (click)="showModal()" class="btn btn-raised btn-raised btn-primary">
                           <i class="ft-save"></i> Lưu
                         </button>
                       </div>
@@ -104,7 +103,6 @@
           </div>
         </div>
       </div>
-
 
 
       <div class="col-md-6" *ngIf="chitietSp != null">
@@ -203,7 +201,7 @@
              <span aria-hidden="true">&times;</span>
          </button>
      </div>
-     <div class="modal-body">Are you sure you want to delete?</div>
+     <div class="modal-body">Are you sure you want to save?</div>
          <div  class="modal-footer">
              <div class="col-md-12 text-center">
                  <button type="submit" (click)="saveSanpham()" class="btn btn-raised btn-success but1">
