--- a/ShoesAdmin/src/app/components/form-sanpham/form-sanpham.component.html
+++ b/ShoesAdmin/src/app/components/form-sanpham/form-sanpham.component.html
@@ -70,7 +70,7 @@
                   <div class="row">
                     <div class="col-md-12">
                       <div class="form-actions text-center">
-                        <button type="button" class="btn btn-raised btn-raised btn-warning" routerLink="/sanpham">
+                        <button type="button" class="btn btn-raised btn-raised btn-warning" routerLink="/index/sanpham">
                           <i class="ft-corner-up-left"></i> Quay lại
                         </button>
                         <button type="button" (click)="showModal()" class="btn btn-raised btn-raised btn-primary">
