--- a/ShoesAdmin/src/app/components/table-sanpham/table-sanpham.component.html
+++ b/ShoesAdmin/src/app/components/table-sanpham/table-sanpham.component.html
@@ -12,7 +12,7 @@
                     <div class="card-body">
                         <div class="card-block">
                             <div class="mb-3">
-                                <a class="btn btn-raised gradient-pomegranate white" [routerLink]="['/themsanpham']" >
+                                <a class="btn btn-raised gradient-pomegranate white" [routerLink]="['/index/themsanpham']" >
                                         <!-- [routerLink]="['/themsanpham]" -->
                                     Thêm sản phẩm
                                 </a>
@@ -43,7 +43,7 @@
                                             </span>
                                         </td>
                                         <td routerLinkActive="active">
-                                            <a class="info p-0" data-original-title="" title="Chi tiết" routerLink="/sanpham/{{sp.id}}">
+                                            <a class="info p-0" data-original-title="" title="Chi tiết" routerLink="/index/sanpham/{{sp.id}}">
                                                 <i class="ft-list font-medium-3 mr-2"></i>
                                             </a>
                                             <!-- <a class="info p-0" data-original-title="" title="Thêm mới" [routerLink]= "['/chitiet-sp']">
