--- a/ShoesAdmin/src/app/components/login/login.component.html
+++ b/ShoesAdmin/src/app/components/login/login.component.html
@@ -4,13 +4,13 @@
       <div class="form-group row">
         <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
         <div class="col-sm-10">
-          <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+          <input type="text" name="username" class="form-control" [(ngModel)]="username" [ngModelOptions]="{standalone: true}" id="inputEmail3" placeholder="Username">
         </div>
       </div>
       <div class="form-group row">
         <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
         <div class="col-sm-10">
-          <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+          <input type="password" name="password" class="form-control" [(ngModel)]="password" [ngModelOptions]="{standalone: true}" id="inputPassword3" placeholder="Password">
         </div>
       </div>
       <div class="form-group row">
