--- a/ShoesAdmin/src/app/components/table-hoadon/table-hoadon.component.html
+++ b/ShoesAdmin/src/app/components/table-hoadon/table-hoadon.component.html
@@ -40,7 +40,7 @@
                                         </td>
                                         <td>{{hd.tongTien | currency}}VND</td>
                                         <td style="text-align: left">
-                                            <a class="info p-0" data-original-title="" title="Chi tiết" routerLink="/hoadon/{{hd.id}}">
+                                            <a class="info p-0" data-original-title="" title="Chi tiết" routerLink="/index/hoadon/{{hd.id}}">
                                                 <i class="ft-list font-medium-3 mr-2"></i>
                                             </a>
                                             <a class="success p-0" data-original-title="" title="Cập nhật">
