Update icon, file export Admin

--- a/ShoesAdmin/src/app/components/index/index.component.html
+++ b/ShoesAdmin/src/app/components/index/index.component.html
@@ -41,6 +41,12 @@
             </a>
           </li>
           <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+            <a [routerLink]="['loaigiay']">
+              <i class="ft-aperture"></i>
+              <span data-i18n="" class="menu-title">Loại Giày</span>
+            </a>
+          </li>
+          <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
             <a [routerLink]="['hoadon']">
               <i class="ft-book"></i>
               <span data-i18n="" class="menu-title">Hóa Đơn</span>
@@ -48,20 +54,14 @@
           </li>
           <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
             <a [routerLink]="['khachhang']">
-              <i class="ft-layers"></i>
+              <i class="ft-users"></i>
               <span data-i18n="" class="menu-title">Khách Hàng</span>
             </a>
           </li>
           <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
             <a [routerLink]="['nhanvien']">
-              <i class="ft-file-text"></i>
+              <i class="ft-users"></i>
               <span data-i18n="" class="menu-title">Nhân Viên</span>
-            </a>
-          </li>
-          <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
-            <a [routerLink]="['loaigiay']">
-              <i class="ft-file-text"></i>
-              <span data-i18n="" class="menu-title">Loại Giày</span>
             </a>
           </li>
         </ul>
