--- a/ShoesAdmin/src/app/components/table-hoadon/table-hoadon.component.html
+++ b/ShoesAdmin/src/app/components/table-hoadon/table-hoadon.component.html
@@ -10,7 +10,7 @@
             <div class="col-sm-12">
                 <div class="card">
                     <div class="card-header">
-                        <h4 class="card-title">Hóa Đơn</h4>
+                        <!-- <h4 class="card-title">Hóa Đơn</h4> -->
                     </div>
                     <div class="card-body">
                         <div class="card-block">
@@ -48,7 +48,7 @@
                                             </a>
                                             <a *ngIf="hd.trangThai != 'Hoàn thành'" (click)="showModal(hd.id)"  class="danger p-0" data-original-title="" title="Xóa" id="confirm-cancel">
                                                     <!-- (click)="DelhoaDon(hd.id)" (click)="showModal(hd.id)" -->
-                                                <i class="ft-x font-medium-3 mr-2"></i>
+                                                <i class="ft-trash-2"></i>
                                             </a>
                                         </td>
                                     </tr>
