--- a/ShoesAdmin/src/app/components/loaigiay/loaigiay.component.html
+++ b/ShoesAdmin/src/app/components/loaigiay/loaigiay.component.html
@@ -13,10 +13,8 @@
                     <div class="card-body">
                         <div class="card-block">
                             <button id="addRow" class="btn btn-primary mb-2" (click)="showModalInsert()">
-                                <i class="ft-user-plus"></i>&nbsp; Thêm mới</button>
-                            <div class="mb-3">
-                            </div>
-                            <table id="table_sp" class="table table-striped table-bordered sourced-data dataTable" role="grid" aria-describedby="DataTables_Table_0_info">
+                                <i class="ft-plus-square"></i>&nbsp; Thêm mới</button>
+                            <table id="table_lg" class="table table-striped table-bordered sourced-data dataTable" role="grid" aria-describedby="DataTables_Table_0_info">
                                 <thead>
                                     <tr>
                                         <th>Mã Giày</th>
@@ -66,6 +64,9 @@
                 <label class="title">Loại giày </label>
                 <div class="form-group">
                     <input formControlName="ten_Giay" value="{{ChitietLoaigiay.tenLoai}}" type="text" class="form-control">
+                    <!-- <app-error-validate
+                     [control]="Loaigiay.controls.ten_Giay">
+                    </app-error-validate> -->
                 </div>
             </div>
             <div class="row">
