--- a/ShoesAdmin/src/app/components/table-sanpham/table-sanpham.component.html
+++ b/ShoesAdmin/src/app/components/table-sanpham/table-sanpham.component.html
@@ -11,12 +11,8 @@
                 <div class="card">
                     <div class="card-body">
                         <div class="card-block">
-                            <div class="mb-3">
-                                <a class="btn btn-raised gradient-pomegranate white" [routerLink]="['/index/themsanpham']" >
-                                        <!-- [routerLink]="['/themsanpham]" -->
-                                    Thêm sản phẩm
-                                </a>
-                            </div>
+                            <button id="addRow" class="btn btn-primary mb-2" [routerLink]="['/index/themsanpham']">
+                                <i class="ft-plus-circle"></i>&nbsp; Thêm mới</button>
                             <table id="table_sp" class="table table-striped table-bordered sourced-data dataTable" role="grid" aria-describedby="DataTables_Table_0_info">
                                 <thead>
                                     <tr>
